	PR c++/82872 	* convert.c (convert_to_integer_1) <POINTER_TYPE>: Do not return the 	shared zero if the input has overflowed.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255944 138bc75d-0d04-0410-961f-82ee72b054a4